--- a/index.html
+++ b/index.html
@@ -1,163 +1,64 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BatchPay – Log ind / Opret (demo)</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Wokshop – Kurv (demo)</title>
   <style>
-    :root{
-      --bg:#0b1220; --panel:#0e1730; --panel2:#0a1224; --text:#e6f1ff; --muted:#99a7c0;
-      --accent:#60a5fa; --accent2:#3b82f6; --line:#1f2a44;
-    }
+    :root{--bg:#0c0f13;--panel:#12161c;--accent:#e08a57;--text:#e9eef3;--muted:#a9b2be;--line:#212a35;--ok:#10b981;}
     *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(1000px 600px at 10% -10%, rgba(96,165,250,.25), transparent 60%),
-        radial-gradient(1200px 800px at 110% 10%, rgba(59,130,246,.20), transparent 65%),
-        #0b1220;
-      min-height:100vh; display:flex; align-items:center; justify-content:center; padding:24px;
-    }
-    .card{width:100%; max-width:960px; display:grid; grid-template-columns: 1.2fr 1fr; gap:0;
-      background:linear-gradient(180deg,var(--panel),var(--panel2));
-      border:1px solid var(--line); border-radius:20px; overflow:hidden; box-shadow:0 30px 120px rgba(0,0,0,.45);
-    }
-    .left{padding:28px 32px; border-right:1px solid #142147; display:flex; flex-direction:column; gap:18px}
-    .brand{display:flex; align-items:center; gap:12px}
-    .logo{width:40px;height:40px;border-radius:10px;display:inline-flex;align-items:center;justify-content:center;
-      background:radial-gradient(120px 60px at -20% -20%, rgba(96,165,250,.35), transparent 60%), #0a1326;
-      border:1px solid #1f2a44; box-shadow:0 0 0 1px rgba(96,165,250,.15) inset;
-    }
-    .logo svg{width:24px;height:24px}
-    .title{font-size:22px;font-weight:800}
-    .tag{display:inline-flex;gap:8px;align-items:center;font-size:12px;color:#cfe2ff}
-    .big{font-size:14px; color:#c9d7f2; line-height:1.7}
-    .bullets{display:grid; gap:10px; margin-top:8px}
-    .bullets span{display:flex; gap:8px; align-items:center; color:#bcd0ff; font-size:13px}
-
-    .right{padding:28px 32px; display:flex; flex-direction:column; gap:16px}
-    .tabs{display:flex; gap:10px}
-    .tab{appearance:none;border:none;background:#0c1533;color:#d6e4ff; padding:10px 14px; border-radius:12px; border:1px solid #213067; cursor:pointer}
-    .tab.active{background:#0f1d4a; border-color:#3152a3; color:#fff}
-    .form{display:grid; gap:12px}
-    .label{font-size:12px;color:var(--muted)}
-    .input{width:100%; padding:12px 12px; border-radius:12px; border:1px solid #213067; background:#0a142e; color:#e6f1ff}
-    .row{display:flex; align-items:center; justify-content:space-between; gap:12px}
-    .btn{padding:12px 14px; border-radius:12px; border:1px solid #2a3b63; background:#0d1633; color:#e6f1ff; cursor:pointer}
-    .btn.primary{border-color:#1d4ed8; background:linear-gradient(180deg,var(--accent),var(--accent2)); color:#0b1220; font-weight:800}
-    .hint{font-size:12px; color:#aab6d3}
-    .remember{display:flex; gap:8px; align-items:center; font-size:12px; color:#cfe2ff}
-    .showpw{display:flex; gap:8px; align-items:center; font-size:12px; color:#cfe2ff}
-    .footer{font-size:12px; color:#8ea2d0; opacity:.9}
-    @media (max-width: 860px){
-      .card{grid-template-columns:1fr}
-      .left{border-right:none; border-bottom:1px solid #142147}
-    }
+    body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg);color:var(--text)}
+    .wrap{max-width:980px;margin:24px auto;padding:0 16px;display:grid;grid-template-columns:1.4fr .9fr;gap:24px}
+    .card{background:linear-gradient(180deg,var(--panel),#0f141a);border:1px solid var(--line);border-radius:16px;box-shadow:0 18px 80px rgba(0,0,0,.35);padding:16px}
+    h1,h2{margin:.2rem 0 .6rem 0}
+    h1{font-size:20px}
+    h2{font-size:16px;color:var(--muted)}
+    .field{display:flex;gap:10px;margin:10px 0}
+    input{background:#0b1016;border:1px solid #1b2430;color:var(--text);border-radius:10px;padding:10px 12px;flex:1}
+    .order{display:flex;flex-direction:column;gap:10px}
+    .line{display:flex;align-items:center;justify-content:space-between;padding:10px;border:1px solid #1a2430;border-radius:12px;background:#0d141b}
+    .total{display:flex;align-items:center;justify-content:space-between;margin-top:8px;padding-top:10px;border-top:1px dashed #233043}
+    .btn{padding:12px 14px;border-radius:12px;border:1px solid #3a2a1f;background:#1a1410;color:var(--text);cursor:pointer}
+    .btn.primary{background:linear-gradient(180deg,#f4a261,var(--accent));border-color:#a65a2a;color:#220f05;font-weight:800}
+    .btn.ghost{background:transparent;border-color:#273242}
+    .stack{display:flex;gap:10px;flex-wrap:wrap}
+    .banner{margin-top:10px;padding:10px;border:1px solid #174a39;background:#0a2019;border-radius:10px;color:#bfffe5;display:none}
+    .shown{display:block}
+    @media (max-width:820px){.wrap{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
-  <div class="card">
-    <div class="left">
-      <div class="brand">
-        <span class="logo" aria-hidden="true">
-          <svg viewBox="0 0 24 24" fill="none" stroke="url(#grad)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <defs>
-              <linearGradient id="grad" x1="0" y1="0" x2="1" y2="1">
-                <stop offset="0%" stop-color="#60a5fa"/>
-                <stop offset="100%" stop-color="#3b82f6"/>
-              </linearGradient>
-            </defs>
-            <rect x="4" y="6" width="10" height="6" rx="2"></rect>
-            <rect x="10" y="12" width="10" height="6" rx="2"></rect>
-          </svg>
-        </span>
-        <div>
-          <div class="title">BatchPay</div>
-          <div class="tag">Demo · Gruppebetaling uden at lægge ud først</div>
-        </div>
-      </div>
-
-      <div class="big">Log ind eller opret en gratis demo-konto. Der er <b>ingen validering</b> i denne prototype – alle brugernavne &amp; passwords accepteres.</div>
-      <div class="bullets">
-        <span>✅ Betal kun din andel – fællesbetaling gennemføres først når alle er med.</span>
-        <span>✅ Del link med venner – de tilmelder sig og betaler på få sekunder.</span>
-        <span>✅ Brug i apps/websites via indlejrbar komponent.</span>
-      </div>
-      <div class="footer">Kontakt: info@batchpay.demo</div>
+  <div class="wrap">
+    <div class="card">
+      <h1>Ordredetaljer</h1>
+      <div class="field"><input placeholder="Dit fulde navn" value="Demo-bruger"></div>
+      <div class="field"><input placeholder="Telefon" value="+45 22 22 22 22"><input placeholder="Email" value="demo@ex.com"></div>
+      <div class="banner" id="pendingBanner">✅ Din andel er <b>bekræftet (reserveret)</b> i BatchPay.</div>
     </div>
 
-    <div class="right">
-      <div class="tabs">
-        <button class="tab active" data-mode="login">Log ind</button>
-        <button class="tab" data-mode="signup">Opret konto</button>
+    <div class="card">
+      <h2>Din bestilling</h2>
+      <div class="order">
+        <div class="line"><div>Margherita x1</div><strong>DKK 85</strong></div>
+        <div class="line"><div>Cola 0,5L x1</div><strong>DKK 45</strong></div>
+        <div class="total"><div>Total</div><strong>DKK 130</strong></div>
+        <div class="stack">
+          <button class="btn ghost" onclick="alert('Normal checkout (demo)')">Bekræft</button>
+          <button class="btn primary" onclick="toGroup()">Tilføj til gruppeordre</button>
+        </div>
       </div>
-
-      <form id="authForm" class="form">
-        <div>
-          <div class="label">Brugernavn eller e-mail</div>
-          <input id="username" class="input" placeholder="fx jonas@example.com" autocomplete="username" />
-        </div>
-        <div>
-          <div class="label">Adgangskode</div>
-          <input id="password" class="input" type="password" placeholder="••••••••" autocomplete="current-password" />
-        </div>
-
-        <div class="row">
-          <label class="remember"><input id="remember" type="checkbox" checked /> Husk mig</label>
-          <label class="showpw"><input id="showpw" type="checkbox" /> Vis adgangskode</label>
-        </div>
-
-        <button class="btn primary" type="submit" id="submitBtn">Log ind</button>
-        <div class="hint" id="modeHint">Demo: alle felter accepteres – vi gemmer dine oplysninger lokalt.</div>
-      </form>
     </div>
   </div>
 
   <script>
-    // ======= KONFIG =======
-    const ORDERS_PAGE = 'batchpay-orders.html'; // skift hvis din ordreside har et andet filnavn
-
-    // Prefill fra localStorage
-    const usernameEl = document.getElementById('username');
-    const passwordEl = document.getElementById('password');
-    const rememberEl = document.getElementById('remember');
-    const showpwEl = document.getElementById('showpw');
-    const submitBtn = document.getElementById('submitBtn');
-    const modeHint = document.getElementById('modeHint');
-
-    usernameEl.value = localStorage.getItem('bp_username') || '';
-    passwordEl.value = localStorage.getItem('bp_password') || '';
-
-    // Tabs (login / signup)
-    function setMode(mode){
-      document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));
-      document.querySelector('.tab[data-mode="'+mode+'"]').classList.add('active');
-      submitBtn.textContent = mode === 'login' ? 'Log ind' : 'Opret konto';
-      modeHint.textContent = mode === 'login'
-        ? 'Demo: alle felter accepteres – vi gemmer dine oplysninger lokalt.'
-        : 'Demo: opret-konto er også uden validering – vi gemmer lokalt og sender dig videre.';
-      localStorage.setItem('bp_mode', mode);
+    if(localStorage.getItem('bp_last_status')==='ready' || localStorage.getItem('bp_last_status')==='paid'){
+      document.getElementById('pendingBanner').classList.add('shown');
     }
-    setMode(localStorage.getItem('bp_mode') || 'login');
-    document.querySelectorAll('.tab').forEach(btn=>btn.addEventListener('click', ()=> setMode(btn.dataset.mode)));
-
-    // Vis/skjul password
-    document.getElementById('showpw').addEventListener('change', (e)=>{
-      passwordEl.type = e.target.checked ? 'text' : 'password';
-    });
-
-    // Submit (ingen validering)
-    document.getElementById('authForm').addEventListener('submit', (e)=>{
-      e.preventDefault();
-      const username = (usernameEl.value || '').trim();
-      const password = passwordEl.value || '';
-      if(rememberEl.checked){
-        localStorage.setItem('bp_username', username);
-        localStorage.setItem('bp_password', password);
-      }
-      localStorage.setItem('bp_session','ok'); // lille demo-session
-      window.location.href = ORDERS_PAGE;
-    });
+    function toGroup(){
+      localStorage.setItem('bp_invite_group','A12');
+      localStorage.setItem('bp_invite_lines', JSON.stringify(['marg','cola']));
+      location.href = 'batchpay-login.html?invite=1';
+    }
   </script>
 </body>
 </html>
